@@ -2,7 +2,7 @@
 
 Software I wrote for the Unix shell
 [Bash](https://en.wikipedia.org/wiki/Bash_\(Unix_shell\)).
-Find even more tiny little scripts in my
+Find more everyday scripts in my
 [dotfiles](https://github.com/markusfisch/dotfiles) repository.
 
 * ### annual
