@@ -19,7 +19,7 @@
 <div id="Nav"><nav><ul class="NavList contents"><li class="NavListItem"><a class="NavLink Android" href="index.html">Android</a></li><li class="NavListItem"><a class="NavLink Shell" href="shell.html">Shell</a></li><li class="NavListItem"><a class="NavLink Tools" href="tools.html">Tools</a></li><li class="NavListItem"><a class="NavLink Libs" href="libs.html">Libs</a></li><li class="NavListItem Active"><a class="NavLink Games Active" href="games.html">Games</a></li><li class="NavListItem"><a class="NavLink Web" href="web.html">Web</a></li><li class="NavListItem"><a class="NavLink History" href="history.html">History</a></li></ul></nav></div>
 <div id="Article"><article><h1>Games</h1>
 
-<p>Some small games I wrote.</p>
+<p>Just some games I made.</p>
 
 <ul>
 <li><h3>GalEx</h3>
@@ -163,7 +163,7 @@ Playable.</p>
 <p>Her Majesty's Only Field Test Spy™ hard in action for
 <a href="http://ldjam.com/">Ludum Dare</a> #32 "An Unconventional Weapon".
 Just two very simple levels. Ran out of time.
-There's no way to fire that gun on a touch device.</p>
+And there's no way to fire that gun on a touch device, sorry.</p>
 
 <ul>
 <li><a href="http://hhsw.de/sites/proto/ld32/">Play</a></li>
@@ -193,7 +193,7 @@ Playable.</p>
 <li><h3>Tycho</h3>
 
 <p>Prototype game about finding crystals on a blue planet for
-<a href="http://ldjam.com/">Ludum Dare</a> #29 "Beneath the Surface". Playable but very simple.
+<a href="http://ldjam.com/">Ludum Dare</a> #29 "Beneath the Surface". Playable but <em>very</em> simple.
 Ran out of time.</p>
 
 <ul>
@@ -213,8 +213,8 @@ Playable.</p>
 </ul></li>
 <li><h3>quadTRI</h3>
 
-<p>Puzzle game for two players for <a href="http://ldjam.com/">Ludum Dare</a> #26 "Minimalism".
-Playable with a friend.</p>
+<p>Two player game about matching triangles for <a href="http://ldjam.com/">Ludum Dare</a> #26
+"Minimalism". Playable with a friend.</p>
 
 <ul>
 <li><a href="http://hhsw.de/sites/proto/ld26/">Play</a></li>
