@@ -44,7 +44,8 @@
 </ul></li>
 <li><h3>Kartpokal Franken</h3>
 
-<p>Was a regional indoor go-kart championship for everybody.</p>
+<p>Was a regional indoor go-kart championship for everyone.
+I raced in the team "KRC Schwabach".</p>
 
 <ul>
 <li><a href="http://www.kartpokal.de/">Website</a></li>
