@@ -21,7 +21,7 @@
 
 <p>Software I wrote for the Unix shell
 <a href="https://en.wikipedia.org/wiki/Bash_(Unix_shell)">Bash</a>.
-Find even more tiny little scripts in my
+Find more everyday scripts in my
 <a href="https://github.com/markusfisch/dotfiles">dotfiles</a> repository.</p>
 
 <ul>
