@@ -17,7 +17,8 @@
 
 	+ [Visit](arch/markusfisch.de/2011)
 * ### Kartpokal Franken
-	Was a regional indoor go-kart championship for everybody.
+	Was a regional indoor go-kart championship for everyone.
+	I raced in the team "KRC Schwabach".
 
 	+ [Website](http://www.kartpokal.de/)
 	+ [GitHub](https://github.com/markusfisch/kartpokal.de)
